--- a/tex/references.bib
+++ b/tex/references.bib
@@ -30,3 +30,10 @@
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
 } 
+@book{Rockafellar,
+  title={Variational Analysis},
+  author={Rockafellar, R Tyrrell and Wets, Roger J-B},
+  volume={317},
+  year={2009},
+  publisher={Springer Science \& Business Media}
+}
