--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -20,6 +20,9 @@
 \def\BState{\State\hskip-\ALG@thistlm}
 \makeatother
 
+\usepackage{tabstackengine}
+\stackMath
+
 \usepackage{tikz}
 \usetikzlibrary{scopes}
 \usetikzlibrary{shapes.misc}
@@ -36,7 +39,6 @@ cross/.default={2pt}}
 \DeclareMathOperator{\dom}{dom}
 
 \newcommand{\EH}[1]{{\color{blue} {Eric: {#1}}  }}
-
 
 \pdfinfo{
    /Author (Eric Huang)
@@ -149,11 +151,25 @@ where $\mu$ is the coefficient of friction, $R$ is the region of the
 rigid body in contact with the plane, $\mathbf{v}(\mathbf{r})$ is the
 body point velocity given by (\ref{eq:generalized-velocity}) and
 $p(\mathbf{r})$ is a pressure distribution over $R$.
+\begin{equation}
+\begin{aligned}
+& \underset{\mathbf{v}^+}{\text{minimize}}
+& & \mu\int_R\lVert A(\mathbf{r})\mathbf{v}^+ \rVert p(\mathbf{r}) dA \\
+& \text{subject to}
+& & \mathbf{v}^+ \in \mathcal{C} 
+\end{aligned} \label{eq:constrained-frictional-dissipation}
+\end{equation}
+Without loss of generality, we take
+$\mathcal{C} = \{[0,1,\omega]^T, \omega \in \mathbb{R}\}$ so that the
+contact point motion is aligned with the coordinate frame. We call the
+objective in (\ref{eq:constrained-frictional-dissipation}) the
+frictional dissipation equation $\mathrm{P}(\mathbf{v}^+)$.
 
-\begin{align}
-  \mathrm{P}(\mathbf{v}^+) &= \mu\int_R\lVert \mathbf{v}(\mathbf{r}) \rVert p(\mathbf{r}) dA
-  % &\mathbf{v}^+_1 = 0, \mathbf{v}^+_2 = 1
-\end{align}
+
+
+\begin{equation} \label{eq:frictional-dissipation}
+  \mathrm{P}(\mathbf{v}^+) = \mu\int_R\lVert \mathbf{v}(\mathbf{r}) \rVert p(\mathbf{r}) dA
+\end{equation}
 Form the Lagrangian
 \begin{equation}
   \mathrm{L}(\mathbf{v}^+,\mathbf{\lambda}) = \mathrm{P}(\mathbf{v}^+) - \lambda_1(v^+_1 - 1) - \lambda_2v^+_2
@@ -281,7 +297,7 @@ surface.
 
 \subsection{Frictional Force \& Moment Envelopes}
 
-\begin{figure*}[!ht]
+\begin{figure*}[ht]
   \centering
   \begin{subfigure}[b]{0.24\textwidth}
     \centering
@@ -329,29 +345,115 @@ Convex hull/envelope.
 \subsection{Exact Angular Velocities Bounds}
 
 \begin{proposition}
-  Suppose $P(u) := \argmin_x f(x,u)$ with
-  $f:\mathbb{R}\times\mathbb{R}\rightarrow\mathbb{R}$ continuous,
-  convex and $f \rightarrow \infty$ as $|x| \rightarrow \infty$. If
-  $f$ is strictly convex in $x$, then $P$ is a continuous function on
-  the interior of $\dom P$.
+  The constrained frictional dissipation equation
+  $\mathrm{D}_{\mathcal{C}}(\mathbf{v}^+)$ has a unique minimizer for
+  pressure distributions with some support force off of the
+  $x$-axis. When otherwise, the equation admits an interval of minima.
 \end{proposition}
 
 \begin{proof}
-  Given by Corollary 7.43 in \cite{Rockafellar}.
+  The work of \cite{Mason1982} was the first to prove the above
+  observation for finite pressure distributions. For the case of
+  infinite (discrete) pressure distributions, we can appeal to the
+  convexity properties of $\lVert A(\mathbf{x})\mathbf{v}^+ \rVert$.
+
+  Minkowski's inequality gives
+  $\lVert x + y \rVert \leq \lVert x \rVert + \lVert y \rVert$ with
+  equality if and only if $x$ and $y$ are positively linearly
+  dependent. For two generalized velocities
+  $\mathbf{v}^+_1,\mathbf{v}^+_2\in \mathcal{C}$, the resulting body
+  point velocities are linearly dependent if and only if the
+  determinant
+  \begin{align}
+    \det A(\mathbf{x})
+      \begin{bmatrix*}
+        \mathbf{v}^+_1 & \mathbf{v}^+_2
+      \end{bmatrix*}
+    &= \det
+     \begin{bmatrix*}
+       -x_2\omega_1 & -x_2\omega_2 \\
+       1 + x_1\omega_1 & 1 + x_1\omega_2 
+     \end{bmatrix*}\\
+    &= -x_2(\omega_1 - \omega_2)
+  \end{align}
+  is zero. We immediately see that
+  $\lVert A(\mathbf{x})\mathbf{v}^+ \rVert$ is strictly convex
+  relative to $\mathcal{C}$ if and only if the body point $\mathbf{x}$
+  lies off of the $x$-axis. The proposition follows from the fact that
+  the positive sum of convex functions and a strictly convex function
+  is strictly convex.
+\end{proof}
+
+An object whose contact region is two discrete points, e.g. a spoon,
+can have multiple minimizing angular velocities when aligned with the
+$x$-axis.
+
+\begin{proposition}
+  Suppose $P(u) := \argmin_x f(x,u)$ with
+  $f:\mathcal{X}\times\mathcal{U}\rightarrow\mathbb{R}$ continuous and
+  level-set bounded. Then the set-valued mapping $P(u)$ is outer
+  semi-continuous and locally bounded.
+\end{proposition}
+
+\begin{proof}
+  Proposition adapted from Corollary 7.42 in \cite{Rockafellar}.
 \end{proof}
 
 \begin{theorem}
   For pulling of a planar rigid body with known center of pressure,
-  the set of all feasible rotation centers is connected.
+  the set of all feasible angular velocities is connected.
 \end{theorem}
 
 \begin{proof}
+  Let us assume that the contact point moves with velocity
+  $\mathbf{v}_c = [0,1]^T$. Then the generalized velocity of the
+  pulled body is of the form $\mathbf{v}^+ = [0, 1, \omega]^T$. We
+  want to show that the set of feasible angular velocities is a
+  connected set.
+
+  First, we argue that the frictional dissipation equation
+  $\mathrm{D}(\mathbf{v}^+) = \mu\int_R\lVert
+  A(\mathbf{r})\mathbf{v}^+ \rVert p(\mathbf{r})dA$
+  has a unique minimum. 
+
+  For a given body point $\mathbf{x}$, the matrix $A(\mathbf{x})$ has
+  a null space spanned by $[x_2,-x_1,1]^T$. 
+  \begin{equation}
+    A(\mathbf{x})\mathbf{v}^+ = 
+    \begin{bmatrix*}[r]
+      1 & 0 & -x_2\\
+      0 & 1 & x_1\\
+    \end{bmatrix*} 
+    \begin{bmatrix*}
+      0\\ 1 \\ \omega
+    \end{bmatrix*}
+     = 
+     \begin{bmatrix*}
+       -x_2\omega \\
+       1 + x_1\omega
+     \end{bmatrix*}
+  \end{equation}
+
+  \begin{center}
+    \bgroup
+    \def\arraystretch{1.5}%  1 is the default, change whatever you need
+    \begin{tabular}{r l c r}
+      $\mathcal{N}(A(\mathbf{x}))$ = &$[\;x_2$ & $-x_1$ & $1\;]^T$ \\
+      $\mathbf{v}^+$ = &$[\;0$ & $1$ & $\omega\;]^T$ \\
+    \end{tabular}
+    \egroup
+  \end{center}
+
   Let $v^+$ be the generalized velocity. The rotation center that
   generates zero moment is the solution to 
   \begin{equation}
     \int_R\lVert A(x)v^+ \rVert d\mu(x)
   \end{equation}
   subject to 
+
+  The image of a connected set by an outer-semicontinuous set-valued
+  mapping whose values are nonempty and connected is connected
+  \cite{hiriart1985images}.
 \end{proof}
 
 \begin{algorithm}
