--- a/tex/references.bib
+++ b/tex/references.bib
@@ -37,3 +37,21 @@
   year={2009},
   publisher={Springer Science \& Business Media}
 }
+@phdthesis{Mason1982,
+ author = {Mason, Matthew T},
+ title = {Manipulator Grasping and Pushing Operations},
+ year = {1982},
+ source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Amitai%3AMIT-AILab%2F%2FAITR-690},
+ publisher = {Massachusetts Institute of Technology},
+ address = {Cambridge, MA, USA},
+} 
+@article{hiriart1985images,
+  title={Images of connected sets by semicontinuous multifunctions},
+  author={Hiriart-Urruty, J-B},
+  journal={Journal of mathematical analysis and applications},
+  volume={111},
+  number={2},
+  pages={407--422},
+  year={1985},
+  publisher={Elsevier}
+}
