--- a/tex/references.bib
+++ b/tex/references.bib
@@ -48,10 +48,20 @@
 @article{hiriart1985images,
   title={Images of connected sets by semicontinuous multifunctions},
   author={Hiriart-Urruty, J-B},
-  journal={Journal of mathematical analysis and applications},
+  journal={Journal of Mathematical Analysis and Applications},
   volume={111},
   number={2},
   pages={407--422},
   year={1985},
   publisher={Elsevier}
+}
+@article{alexander1993bounds,
+  title={Bounds on the friction-dominated motion of a pushed object},
+  author={Alexander, JC and Maddocks, JH},
+  journal={The International Journal of Robotics Research},
+  volume={12},
+  number={3},
+  pages={231--248},
+  year={1993},
+  publisher={Sage Publications}
 }
