--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -567,6 +567,8 @@ of points in the discretization of $R$.
 \end{algorithmic}
 \end{algorithm}
 
+\subsection{Exact Position Bounds}\label{sec:cop-bounds}
+
 \subsection{Center of Pressure Bounds}\label{sec:cop-bounds}
 
 \bibliographystyle{plainnat}
